# weather_forecast_api

./: .env.example  .gitignore  LICENSE  Makefile  README.md  db.sqlite3  pyproject.toml
weather/: models.py  urls.py  views.py
weather/domain/: domain.py  entities.py
weather/domain/services/: city.py  weather_day_forecast.py  weather_forecast.py
weather/migrations/: 0001_initial.py
weather/templates/weather/: index.html  results.html
weather_forecast_api/: asgi.py  settings.py  urls.py  wsgi.py
